@@ -1324,6 +1324,10 @@ TAO_DDS_DCPSInfo_i::disassociate_subscription(
     throw OpenDDS::DCPS::Invalid_Participant();
   }
 
+  if (OpenDDS::DCPS::DCPS_debug_level > 3) {
+    ACE_DEBUG((LM_INFO, "(%P|%t) disassociating subscription\n"));
+  }
+
   DCPS_IR_Subscription* subscription;
   if (participant->find_subscription_reference(local_id, subscription)
       != 0 || subscription == 0) {
@@ -1353,6 +1357,10 @@ TAO_DDS_DCPSInfo_i::disassociate_publication(
   DCPS_IR_Participant* participant = it->second->participant(participantId);
   if (participant == 0) {
     throw OpenDDS::DCPS::Invalid_Participant();
+  }
+
+  if (OpenDDS::DCPS::DCPS_debug_level > 3) {
+    ACE_DEBUG((LM_INFO, "(%P|%t) disassociating publication\n"));
   }
 
   DCPS_IR_Publication* publication;
@@ -1445,6 +1453,9 @@ void TAO_DDS_DCPSInfo_i::association_complete(DDS::DomainId_t domainId,
   // since the DataReader is the passive peer)
   DCPS_IR_Subscription* sub = 0;
   DCPS_IR_Publication* pub = 0;
+  if (OpenDDS::DCPS::DCPS_debug_level > 3) {
+    ACE_DEBUG((LM_INFO, "(%P|%t) completing association\n"));
+  }
   if (0 == partPtr->find_subscription_reference(localId, sub)) {
     sub->association_complete(remoteId);
   } else if (0 == partPtr->find_publication_reference(localId, pub)) {
@@ -1587,6 +1598,10 @@ CORBA::Boolean TAO_DDS_DCPSInfo_i::update_publication_qos(
     throw OpenDDS::DCPS::Invalid_Participant();
   }
 
+  if (OpenDDS::DCPS::DCPS_debug_level > 3) {
+    ACE_DEBUG((LM_INFO, "(%P|%t) updating  publication qos 1\n"));
+  }
+
   DCPS_IR_Publication* pub;
 
   if (partPtr->find_publication_reference(dwId, pub) != 0 || pub == 0) {
@@ -1652,6 +1667,10 @@ TAO_DDS_DCPSInfo_i::update_publication_qos(
     throw OpenDDS::DCPS::Invalid_Participant();
   }
 
+  if (OpenDDS::DCPS::DCPS_debug_level > 3) {
+    ACE_DEBUG((LM_INFO, "(%P|%t) updating  publication qos 2\n"));
+  }
+
   DCPS_IR_Publication* pub;
 
   if (partPtr->find_publication_reference(dwId, pub) != 0 || pub == 0) {
@@ -1683,6 +1702,10 @@ TAO_DDS_DCPSInfo_i::update_publication_qos(
 
   if (0 == partPtr) {
     throw OpenDDS::DCPS::Invalid_Participant();
+  }
+
+  if (OpenDDS::DCPS::DCPS_debug_level > 3) {
+    ACE_DEBUG((LM_INFO, "(%P|%t) updating  publication qos 3\n"));
   }
 
   DCPS_IR_Publication* pub;
@@ -1719,6 +1742,10 @@ CORBA::Boolean TAO_DDS_DCPSInfo_i::update_subscription_qos(
   }
 
   DCPS_IR_Subscription* sub;
+
+  if (OpenDDS::DCPS::DCPS_debug_level > 3) {
+    ACE_DEBUG((LM_INFO, "(%P|%t) updating QOS for subscription 1\n"));
+  }
 
   if (partPtr->find_subscription_reference(drId, sub) != 0 || sub == 0) {
     throw OpenDDS::DCPS::Invalid_Subscription();
@@ -1785,6 +1812,10 @@ TAO_DDS_DCPSInfo_i::update_subscription_qos(
 
   DCPS_IR_Subscription* sub;
 
+  if (OpenDDS::DCPS::DCPS_debug_level > 3) {
+    ACE_DEBUG((LM_INFO, "(%P|%t) updating QOS for subscription 2\n"));
+  }
+
   if (partPtr->find_subscription_reference(drId, sub) != 0 || sub == 0) {
     throw OpenDDS::DCPS::Invalid_Subscription();
   }
@@ -1818,6 +1849,10 @@ TAO_DDS_DCPSInfo_i::update_subscription_qos(
 
   DCPS_IR_Subscription* sub;
 
+  if (OpenDDS::DCPS::DCPS_debug_level > 3) {
+    ACE_DEBUG((LM_INFO, "(%P|%t) updating QOS for subscription 3\n"));
+  }
+
   if (partPtr->find_subscription_reference(drId, sub) != 0 || sub == 0) {
     throw OpenDDS::DCPS::Invalid_Subscription();
   }
@@ -1842,6 +1877,10 @@ TAO_DDS_DCPSInfo_i::update_subscription_params(
   DCPS_IR_Participant* partPtr = domain->second->participant(participantId);
   if (0 == partPtr) {
     throw OpenDDS::DCPS::Invalid_Participant();
+  }
+
+  if (OpenDDS::DCPS::DCPS_debug_level > 3) {
+    ACE_DEBUG((LM_INFO, "(%P|%t) updating subscription params\n"));
   }
 
   DCPS_IR_Subscription* sub;
